# companionship

./: .all-contributorsrc  .codeclimate.yml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  CHECKS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Personae.md  README.md  app.json  deployment.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql.yml  python.yml  test.yml
Documentation/diagrams/: Architecture.md
docs/diagrams/: architecture.md
project/accounts/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_is_staff.py  0004_user_display_name.py  0005_alter_user_display_name_alter_user_email.py  0006_user_is_active.py  0007_rename_is_active_user_active.py  0008_remove_user_active.py  max_migration.txt
project/accounts/templates/accounts/: email_verified.html  login.html  password_change.html  password_change_complete.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  signup.html
project/accounts/templates/registration/: login.html  signup.html
project/activities/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
project/activities/migrations/: 0001_initial.py  0002_activity_note.py  0002_alter_activity_options_activity_activity_date.py  0002_comment.py  0003_activity_care_group.py  0003_activity_done.py  0004_alter_activity_care_group.py  0005_alter_activity_options.py  0006_activity_participants.py  0007_remove_activity_care_group_activity_person.py  max_migration.txt
project/activities/templates/activities/: activity_form.html  comments_detail.html
project/addresses/: apps.py
project/care_groups/: admin.py  apps.py  models.py  urls.py  views.py
project/care_groups/migrations/: 0001_initial.py  0002_caregroup_members.py  0003_caregroup_coordinators.py  0004_alter_caregroup_members.py  0005_remove_caregroup_coordinators_and_more.py  0006_caregroupmembership.py  0007_alter_caregroupmembership_user.py  0008_alter_caregroupmembership_care_group.py  0009_caregroup_photo.py
project/caregivers/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
project/caregivers/migrations/: 0001_initial.py  0002_caregiverlocality.py  0003_delete_caregiverlocality.py
project/circles/: admin.py  apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
project/circles/migrations/: 0001_initial.py
project/circles/templates/circles/: circle_activity.html  (+9 more)
project/core/: settings.py  urls.py
project/error_handler/: views.py
project/error_handling/: views.py
project/password/: apps.py
project/people/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
project/people/migrations/: 0001_initial.py  0002_alter_companion_unique_together.py  0003_joinrequest.py  0004_alter_companion_person_alter_companion_user.py  max_migration.txt
project/templates/: 400.html  403.html  404.html  500.html  base.html  home.html  i18n.html  navigation.html
project/templates/mockups/: group_jane.html  groups.html
(+20 files in other folders)
