[tool.poetry]
name = "django-bootstrap-quick-start"
version = "0.1.0"
description = "A Django boilerplate to start your projects faster."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
crispy-bootstrap5 = "^0.6"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
reportlab = "^3.6.5"
svglib = "^1.1.0"
easy-thumbnails = "^2.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1a5"
isort = "^5.10.1"
black = "^22.6.0"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".venv/ **/migrations/"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
