[tool.poetry]
name = "companionship-care"
version = "0.1.0"
description = "Promoting companionship and well-being for everyone."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
crispy-bootstrap5 = "^0.7"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
reportlab = "^3.6.12"
svglib = "^1.5.1"
easy-thumbnails = "^2.8.5"
django-browser-reload = "^1.6.0"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.7"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pyproject-flake8 = "^4.0.1"
isort = "^5.11.4"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
ipython = "^8.18.1"
django-debug-toolbar = "^3.7.0"
django-linear-migrations = "^2.5.1"
rich = "^12.6.0"
black = "^22.10.0"
factory-boy = "^3.2.1"

[tool.coverage]
run.omit = ["project/manage.py", "project/core/*", "project/**/tests.py", "project/**/migrations/*",]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".venv/ **/migrations/"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
